--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My first site</title>
+  <meta charset="UTF-8">
+  <title>My First Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Hello world</h1>
-<p>My website is live!</p>
+  <main class="card">
+    <header>
+      <h1>Hello world 🎉</h1>
+    </header>
+
+    <article>
+      <p>
+        My website is live using GitHub Pages.
+        I’m learning HTML, CSS, and flexbox — no divs needed!
+      </p>
+    </article>
+
+    <footer>
+      <button>Click me</button>
+    </footer>
+  </main>
 
 </body>
 </html>
+
