id and class selectors

--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>My First Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <main class="card">
     <header>
-      <h1>Hello world 🎉</h1>
+      <h1 id = "main-title">Hello world 🎉</h1>
     </header>
 
-    <article>
-      <p>
+    <nav class = "navbar">
+      <a href ="#">Home</a>
+      <a href="#">Address</a>
+      <a href="#">Contact</a>
+    </nav>
+
+    <article> <!-- independent, reusable content-->
+      <p class = "intro">
         My website is live using GitHub Pages.
         I’m learning HTML, CSS, and flexbox — no divs needed!
       </p>
